# vita-ftp-client

./: .gitignore  CMakeLists.txt  README.md
lang/: Arabic.ini  Catalan.ini  Chinese.ini  Chinese_Simplified.ini  Chinese_Traditional.ini  Croatian.ini  Dutch.ini  English.ini  Euskera.ini  French.ini  Galego.ini  German.ini  Greek.ini  Hungarian.ini  Indonesian.ini  Italiano.ini  Japanese.ini  Korean.ini  Lolcat.ini  PT-BR.ini  Polish.ini  Portuguese_BR.ini  Russian.ini  Ryukyuan.ini  Simplified Chinese.ini  Spanish.ini  Thai.ini  Traditional Chinese.ini  Turkish.ini
sce_sys/livearea/contents/: template.xml
src/: actions.cpp  actions.h  config.cpp  config.h  fs.cpp  fs.h  ftpclient.cpp  ftpclient.h  gui.cpp  gui.h  ime_dialog.cpp  lang.cpp  lang.h  log.h  main.cpp  net.cpp  style.h  textures.cpp  textures.h  updater.cpp  updater.h  util.h  windows.cpp  windows.h
